# pre_email_demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: encryption.rs  main.rs  message_loader.rs  message_transmitter.rs  target.rs
proxy/: Cargo.toml
proxy/src/: command.pest  command.rs  main.rs  message.rs  message_loader.rs  message_transmitter.rs  re_encryption.rs  target.rs
src/: command.pest  command.rs  email.pest  main.rs  message.rs  message_loader.rs  message_transmitter.rs  re_encryption.rs  target.rs
