[package]
name = "pre_email_demo"
version = "0.1.0"
authors = ["Janik Dohrmann <janik.dohrmann@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recrypt = "0.12.0"
imap = "3.0.0-alpha.4"
native-tls = "0.2.7"

lettre = "0.9"
lettre_email = "0.9"

pest = "2.1.3"
pest_derive = "2.1.0"

chrono = "0.4.19"